--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "serve": "^14.2.3"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.24.7"
   }
 }
